# attractor-wallpaper

./: .gitignore  Cargo.toml  README.md  config.json
.cargo/: config
.github/workflows/: rust.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/io/github/rodrigodd/attractorwallpaper/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/rodrigodd/attractorwallpaper/: AttractorSurfaceView.kt  SettingsActivity.kt
android/app/src/main/java/io/github/rodrigodd/attractorwallpaper/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/animator/: rotation.xml
android/app/src/main/res/drawable/: loading_icon.xml  loading_icon_anim.xml
android/app/src/main/res/layout/: settings_activity.xml
android/app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: preferences.xml
android/app/src/test/java/io/github/rodrigodd/attractorwallpaper/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: Cargo.toml
android/lib/src/: bindings.rs  lib.rs
attractors/: Cargo.toml  do_the_math.ipynb  generate_code.py  plot.py
attractors/src/: lib.rs  sympy.rs  test.rs
egui/: Cargo.toml
egui/src/: channel.rs  default.json  main.rs  widgets.rs
egui/src/colors/: conversions.rs  mod.rs
egui/src/widgets/: gradient.rs
egui/src/widgets/ok_picker/: mod.rs  okhsl.rs  okhsv.rs
notebooks/: affine_transform.ipynb  dither.html  dithering.ipynb  freq_response.ipynb  noise_estimate.ipynb
oklab/: Cargo.toml
oklab/ref_check/: Makefile  checker.rs  ok_color.h  tester.cpp  tester.rs
oklab/src/: lib.rs  ok_color.rs
render/: Cargo.toml
render/src/: channel.rs  compute.wgsl  executor.rs  gradient.rs  lib.rs  main.rs  renderer.rs  shader.wgsl
winit-executor/: Cargo.toml
winit-executor/src/: lib.rs
