[package]
name = "attractors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", default-features = false, features = [
    "small_rng",
    "std",
] }

[dev-dependencies]
image = { version = "0.24.7", default-features = false, features = ["png"] }
