[package]
name = "attractor-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.0"
egui-wgpu = "0.24.1"
egui-winit = { version = "0.24.1", features = ["serde"] }
winit = { version = "0.28.7", features = ["serde"] }               # for serde
render = { path = "../render" }
attractors = { path = "../attractors" }
oklab = { path = "../oklab", features = ["serde"] }
rand = "0.8.5"
wallpaper = "3.2.0"
image = "0.24.7"
parking_lot = "0.12.1"
serde = "1.0.193"
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }
documented = "0.2.0"
pollster = "0.3.0"
winit-executor = { version = "0.1.0", path = "../winit-executor" }
