[package]
name = "attractor-egui"
version = "0.1.0"
edition = "2021"

# this contains `ok-picker` derived code which is GPL-3.0-only
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.0"
egui-wgpu = "0.24.1"
egui-winit = { version = "0.24.1", features = ["serde"] }
winit = { version = "0.28.7", features = ["serde"] }      # for serde

winit-executor = { version = "0.1.0", path = "../winit-executor" }
render = { path = "../render", features = ["serde"] }
attractors = { path = "../attractors", features = ["serde"] }
oklab = { path = "../oklab", features = ["serde"] }

env_logger = "0.10.1"
rand = "0.8.5"
parking_lot = "0.12.1"
serde = "1.0.193"
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }
pollster = "0.3.0"
wallpaper = "4.0.0"
image = "0.24.7"
documented = "0.2.0"
log = "0.4.20"
