[package]
name = "attractor-egui"
version = "0.1.0"
edition = "2021"

# this contains `ok-picker` derived code which is GPL-3.0-only
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.29.0"
egui-wgpu = "0.29.0"
egui-winit = { version = "0.29.0", features = ["serde"] }
winit = { version = "0.30.0", features = ["serde"] }      # for serde

winit-executor = { version = "0.1.0", path = "../winit-executor" }
render = { path = "../render", features = ["serde"] }
attractors = { path = "../attractors", features = ["serde"] }
oklab = { path = "../oklab", features = ["serde"] }

env_logger = "0.11.5"
rand = "0.8.5"
parking_lot = "0.12.3"
serde = "1.0.210"
serde_json = "1.0.128"
clap = { version = "4.5.18", features = ["derive"] }
pollster = "0.3.0"
wallpaper = "4.0.0"
image = "0.25.2"
documented = "0.6.0"
log = "0.4.20"
