[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
log = "0.4.20"
waker-fn = "1.1.0"
wgpu = "0.17.0"
winit = { version = "0.28", features = ["serde"] }       # for serde
attractors = { path = "../attractors" }
