[package]
name = "render"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
serde = ["attractors/serde", "oklab/serde", "dep:serde"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
log = "0.4.20"
waker-fn = "1.1.0"
wgpu = "0.18.0"
raw-window-handle = "0.5.2"
attractors = { path = "../attractors" }
oklab = { version = "0.1.0", path = "../oklab" }

serde = { version = "1.0.193", features = ["derive"], optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
parking_lot = "0.12.1"
